--- a/style.css
+++ b/style.css
@@ -51,7 +51,7 @@
  ._wPaint_dropDown {
  
 	height: 28px !important;
-	width: 28px !important;
+	width: 28px;
 	margin-top: -1px;
 	padding: 0px !important;
  
@@ -72,6 +72,7 @@
 ._wPaint_dropDown select {
 
 	margin: 5px;
+	margin-left: 0px;
 
 }
 
@@ -95,8 +96,11 @@
 
 }
 
+._wPaint_fontFamily {
+	
+	width: auto !important;
 
-
+}
 
 
 
