--- a/style.css
+++ b/style.css
@@ -93,7 +93,8 @@
 #OptSize23 {
 
 	padding-left: 5px;
-	-webkit-appearance: none !important;
+	-webkit-appearance: menulist-text !important;
+	-moz-appearance: menulist-text !important;
 
 }
 
